@@ -1126,6 +1126,11 @@ connection if a previous connection has died for some reason."
 			 tramp-adb-program args)))
 		   (prompt (md5 (concat (prin1-to-string process-environment)
 					(current-time-string)))))
+
+	      ;; Set sentinel.  Initialize variables.
+	      (set-process-sentinel p #'tramp-process-sentinel)
+	      (tramp-post-process-creation p vec)
+
 	      ;; Wait for initial prompt.  On some devices, it needs
 	      ;; an initial RET, in order to get it.
               (sleep-for 0.1)
@@ -1133,10 +1138,6 @@ connection if a previous connection has died for some reason."
 	      (tramp-adb-wait-for-output p 30)
 	      (unless (process-live-p p)
 		(tramp-error vec 'file-error "Terminated!"))
-
-	      ;; Set sentinel.  Initialize variables.
-	      (set-process-sentinel p #'tramp-process-sentinel)
-	      (tramp-post-process-creation p vec)
 
 	      ;; Set connection-local variables.
 	      (tramp-set-connection-local-variables vec)
